--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Telegram Mini Apps Vanilla JS Sample App</title>
+    <title>Best Telegram Casinos 2024</title>
     <style>
         body {
             --bg-color: var(--tg-theme-bg-color);
@@ -128,14 +128,14 @@ padding: 10px;
             document.documentElement.className = Telegram.WebApp.colorScheme;
         });
 
-        // Show main button
+        /* Show main button
         Telegram.WebApp.MainButton.setParams({
             text: 'Main Button'
         });
         Telegram.WebApp.MainButton.onClick(function () {
             Telegram.WebApp.showAlert('Main Button was clicked')
         });	
-        Telegram.WebApp.MainButton.show();
+        Telegram.WebApp.MainButton.show();*/
 
         // Function to call showPopup API
         function showPopup() {
